# dacon-classify-breast-cancer

./: Readme.md  convert-script-to-notebook.bash  convertScriptToNotebook.bash  create-model.bash  pyproject.toml
src/models/: flow1d.ipynb
